--- a/package.json
+++ b/package.json
@@ -37,7 +37,19 @@
     "body-parser": "^1.15.1",
     "express": "^4.13.4",
     "preboot": "^2.1.2",
-    "rxjs": "5.0.0-beta.6"
+    "rxjs": "5.0.0-beta.6",
+    "@angular2-material/button": "^2.0.0-alpha.5",
+    "@angular2-material/card": "^2.0.0-alpha.5",
+    "@angular2-material/checkbox": "^2.0.0-alpha.5",
+    "@angular2-material/core": "^2.0.0-alpha.5",
+    "@angular2-material/input": "^2.0.0-alpha.5",
+    "@angular2-material/list": "^2.0.0-alpha.5",
+    "@angular2-material/progress-circle": "^2.0.0-alpha.5",
+    "@angular2-material/progress-bar": "^2.0.0-alpha.5",
+    "@angular2-material/radio": "^2.0.0-alpha.5",
+    "@angular2-material/sidenav": "^2.0.0-alpha.5",
+    "@angular2-material/toolbar": "^2.0.0-alpha.5",
+    "@angular2-material/icon": "^2.0.0-alpha.5"
   },
   "devDependencies": {
     "nodemon": "^1.9.2",
